[package]
name = "rust_raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
bvh = "0.6.0"
glam = "0.20.2"

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["gfx"]